--- a/mingin-main/Minigin/Minigin.vcxproj.filters
+++ b/mingin-main/Minigin/Minigin.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="ScoreComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SteamAchievements.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ResourceManager.cpp">
@@ -162,6 +165,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ScoreComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SteamAchievement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
